[gd_scene load_steps=4 format=3 uid="uid://brrbmk1pvr85y"]

[ext_resource type="PackedScene" uid="uid://dd5ydwcgkk0dm" path="res://scenes/game/dine/dine.tscn" id="1_2qg2p"]
[ext_resource type="Script" uid="uid://r2wdywltdkra" path="res://scenes/main.gd" id="1_sugp2"]
[ext_resource type="PackedScene" uid="uid://dfhd3i6yfl87f" path="res://scenes/UI/menu/menu.tscn" id="2_sugp2"]

[node name="Main" type="Node2D"]
script = ExtResource("1_sugp2")

[node name="Background" type="CanvasLayer" parent="."]
layer = -1
follow_viewport_enabled = true

[node name="BackgroundArea" type="ColorRect" parent="Background"]
custom_minimum_size = Vector2(700, 1200)
anchors_preset = -1
anchor_left = -0.0444444
anchor_top = -0.0953125
anchor_right = 1.0358
anchor_bottom = 1.23802
offset_left = -38.0
offset_top = -37.5
offset_right = 78.6675
offset_bottom = -37.5
pivot_offset = Vector2(339, 600)
size_flags_horizontal = 6
size_flags_vertical = 4
color = Color(0.15205, 0.232317, 0.159357, 1)
metadata/_edit_use_anchors_ = true

[node name="Dine" parent="." instance=ExtResource("1_2qg2p")]
position = Vector2(128, 476)

[node name="TimerObstacle" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Menu" parent="." instance=ExtResource("2_sugp2")]

[connection signal="timeout" from="TimerObstacle" to="." method="_on_timer_obstacle_timeout"]
